[package]
name = "rust-elgamal"
version = "0.2.0"
authors = ["Eleanor McMurtry <elem0@protonmail.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/eleanor-em/rust-elgamal"
documentation = "https://docs.rs/rust-elgamal"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "crypto", "ristretto", "curve25519", "ristretto255", "elgamal"]
description = "A straightforward implementation of ElGamal homomorphic encryption using the ristretto255 elliptic curve group."

[features]
nightly = ["curve25519-dalek/nightly"]
default = ["std"]
# cannot call the feature "serde" (yet)
enable-serde = ["serde", "curve25519-dalek/serde"]
simd_backend = ["nightly", "curve25519-dalek/simd_backend"]
std = ["curve25519-dalek/std", "rand_core/std", "serde/std"]

[dependencies]
# simd_backend extends u64_backend
curve25519-dalek = { version = "3", default_features = false, features = ["alloc", "u64_backend"] }
rand_core = { version = "0.6", default_features = false }
serde = { version = "1", default_features = false, features = ["derive"], optional = true }

[dev-dependencies]
bincode = "1"
rand = { version = "0.8" }
